docs/draft/v1/00.00_Anvil_Overview.md
# Anvil — AI-Powered Forge for Neovim

## What is it

Anvil is a comprehensive [AstroNvim v4](https://astronvim.com/) user configuration that transforms Neovim into a full-featured IDE with deeply integrated AI. It is not a plugin or a distribution — it is a complete working environment where AI is a first-class subsystem alongside LSP, debugging, testing, and Git.

Anvil is designed as a replacement for the VSCode + Cline / Claude Code stack for those who prefer the terminal and open-source tools.

---

## Who is it for

- Developers who want the comfort of a full IDE inside Neovim
- Those who use AI coding assistants and want to control them from the editor
- Teams working with multiple languages in a single environment
- Users who value reproducibility: one configuration — on every machine

---

## Key principles

### Language-first

The language determines everything else. Each language pack is a single file that declaratively describes the LSP server, formatter, linter, debugger, test framework, build tasks, and AI context. Adding a new language means creating one file from a template. Anvil picks up the rest automatically.

### AI-native

AI is not bolted on — it is woven into every layer. Diagnostics, test results, project structure, Git changes — all of this is automatically collected into context and can be sent to an AI agent with a single action. At the same time, AI is never forced on you: inline completions are off by default, chat opens explicitly.

### Single provider

All AI tools work through a single OpenAI-compatible endpoint. OpenRouter, Ollama, LM Studio, vLLM — it does not matter. No subscriptions to GitHub Copilot or Claude Code required. Switching providers means changing one environment variable.

### Portable

Works on Linux and macOS. Installs with a single script. The configuration lives in a Git repository and connects to AstroNvim via symlink without interfering with upstream updates.

---

## What is inside

### Architecture layers

```
╔═══════════════════════════════════════════════╗
║                   ANVIL                       ║
╠═══════════════════════════════════════════════╣
║  UI  │  Editor  │  Git  │  Workflow           ║
║──────┴──────────┴───────┴─────────────────────║
║          Language Layer                        ║
║  Rust · Go · Python · TS · Lua · C · ...      ║
║  Each = LSP + DAP + Test + Lint + Fmt + AI    ║
║───────────────────────────────────────────────║
║            AI Layer                            ║
║  Providers · Context · Agents · MCP · Tools   ║
║───────────────────────────────────────────────║
║            Core Layer                          ║
║  Config · Events · Cache · Logger · Env · Keys║
╚═══════════════════════════════════════════════╝
```

### Editor

- **LSP** — completion, go-to-definition, refactoring, inlay hints
- **Treesitter** — highlighting, function/class navigation, text objects
- **Formatting** — conform.nvim, format-on-save
- **Linting** — nvim-lint, integration with language-specific linters
- **Debugging** — nvim-dap with UI, support for Node.js, Python, Go, Rust, C/C++
- **Testing** — neotest with adapters for each language
- **Completion** — nvim-cmp with LSP, snippets, paths

### AI ecosystem

- **CodeCompanion** — primary AI agent: chat, inline commands, slash commands, MCP
- **minuet-ai** — inline completion on the fly, explicitly toggled with F2
- **wtf.nvim** — AI-powered diagnostic error explanations
- **MCP** — external tool integration: filesystem, databases, browser, search
- **External agents** — Aider, Goose, OpenCode, Plandex launch from the editor with context passed in

### Context for AI

Anvil automatically collects and caches:
- project structure and key files (README, package.json, Cargo.toml...)
- diagnostics for the current buffer and the entire project
- test results
- Git diff
- cursor position with treesitter awareness (current function, class)

All of this is available through slash commands in chat (`/project`, `/diagnostics`, `/tests`, `/diff`, `/url`) and can be passed to external tools with a single command.

### Agent modes

- **Architect** — analyzes first, builds a plan, waits for approval, only then writes code
- **Implement** — autonomous agent: reads files, plans, implements, verifies
- **Debug** — finds the root cause of a bug and fixes it
- **Refactor** — safe step-by-step refactoring with verification
- **Review** — code review with severity ratings and specific fixes

### Git

- gitsigns, lazygit, diffview, blame
- AI review of staged changes before commit
- AI-generated commit messages from diff

### Workflow

- overseer — build tasks from Makefile, package.json, Cargo.toml
- toggleterm — terminals with preconfigured profiles
- harpoon — fast navigation between key files
- sessions — auto-save and restore

---

## Supported languages

Each language is a complete out-of-the-box package:

| Language | LSP | DAP | Test | Lint | Format |
|---|---|---|---|---|---|
| Rust | rust-analyzer | codelldb | neotest-rust | clippy (LSP) | rustfmt |
| Go | gopls | delve | neotest-go | golangci-lint | gofumpt |
| Python | basedpyright | debugpy | neotest-python | ruff | ruff |
| TypeScript | typescript-tools | js-debug | neotest-vitest/jest | eslint (LSP) | prettierd |
| Lua | lua_ls | — | — | selene | stylua |
| C/C++ | clangd | codelldb | — | — | clang-format |
| Bash | bash-ls | — | — | shellcheck | shfmt |
| and more | ... | ... | ... | ... | ... |

Adding a language means creating a single file `lua/anvil/lang/<name>.lua` from a template.

---

## Requirements

- **Neovim** ≥ 0.10
- **Git**, **Node.js** ≥ 18, **npm**
- **ripgrep**, **fd** — for search
- Language toolchains as needed (rustup, go, python3...)
- Nerd Font in the terminal
- OpenAI-compatible API endpoint for AI (OpenRouter, Ollama, etc.)

---

## Quick start

```bash
# 1. Clone AstroNvim
git clone --depth 1 https://github.com/AstroNvim/AstroNvim ~/.config/anvil

# 2. Clone the Anvil configuration
git clone <repo> ~/repos/anvil
ln -s ~/repos/anvil ~/.config/anvil/lua/user

# 3. Set up the API key
export AI_API_KEY="sk-..."
export AI_ENDPOINT="https://openrouter.ai/api/v1"

# 4. Launch
NVIM_APPNAME=anvil nvim

# 5. Verify
:Anvil health
```

---

## Typical usage scenarios

**Quick error fix** — you see a red underline → `<leader>ae` (AI explains) → `<leader>af` (AI fixes) → accept or reject the diff.

**New feature with planning** — `<leader>ap` (Architect mode) → describe the task → AI presents a plan with files and steps → type "go" → AI implements → `/tests` to add test results → iterate.

**Heavy task** — `<leader>Aca` (pass context to Aider) → Aider edits dozens of files → return to Neovim → `<leader>ta` (run tests) → `<leader>tf` (send failures to AI).

**Code review before commit** — `git add -p` → `:AIReviewStaged` → AI finds bugs and vulnerabilities → fix them → `:AICommit` → AI generates a commit message.

**Exploring an unfamiliar project** — `:AIIndex` → `<leader>ac` (chat) → `/project` → `/url https://docs.example.com` → "How is authentication structured in this project?"

---

## Documentation structure

| Document | Contents |
|---|---|
| **Overview** (you are here) | Goals, architecture, capabilities |
| **Installation** | System dependencies, step-by-step setup |
| **Core** | Foundation: configuration, events, cache, logging, keymaps |
| **Languages** | Language packs, template, how to add a new language |
| **AI** | Providers, agents, context, MCP, external tools |
| **Editor** | LSP, treesitter, formatting, debugging, testing |
| **UI** | Theme, statusline, dashboard, navigation |
| **Git** | gitsigns, lazygit, diffview, AI review |
| **Workflow** | Tasks, terminals, sessions, projects |
| **Keymaps** | Complete keymap reference |